字符串提取出来作为可配置文件,完成Ui的编写,正在进行架构的变革